force-app/main/default/objects/Application_Form_Configuration__c/Application_Form_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Application Form Configuration</label>
</CustomObject>