force-app/main/default/objects/Application_Form_Configuration__c/fields/AML_Password__c.field-meta.xml
<CustomField>
    <fullName>AML_Password__c</fullName>
    <label>AML Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>