force-app/main/default/objects/Application_Form_Configuration__c/fields/Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Code__c</fullName>
    <label>Member Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>